# docs

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
Vocabulary/vocab_management/: index.html
concepts/agents/patterns/: index.html
concepts/agents/readme/: index.html
concepts/rdf/: index.html
docs/: CNAME  Olis.md  index.md
docs/Vocabulary/: vocab_management.md
docs/concepts/: rdf.md  vocabs.md
docs/javascripts/: external-links.js
docs/prez/: Overview.md  Prez Manifest.md  data-preparation.md  developers.md  index.md  manifest.md
docs/products/: olis.md
docs/stylesheets/: extra.css
docs/tools/: index.md  kurra.md  labelify.md  ogc-tests.md  prezmanifest.md  sparql-parser.md  vocab_management.md  vocedit.md
javascripts/: external-links.js
olis/: index.html
prez/: index.html
prez/data-preparation/: index.html
prez/developers/: index.html
prez/manifest/: index.html
prez/ui/: index.html
products/k-maker/: index.html
products/olis/: index.html
products/prez/: index.html
products/tools/: index.html
search/: search_index.json
stylesheets/: extra.css
tools/: index.html
tools/kurra/: index.html
tools/labelify/: index.html
tools/ogc-tests/: index.html
tools/prefix-lookup/: index.html
tools/prezmanifest/: index.html
tools/provworkflow/: index.html
tools/pylode/: index.html
tools/rdf-converter/: index.html
tools/rdf-merger/: index.html
tools/shacl-validator/: index.html
tools/sparql-parser/: index.html
tools/vocedit/: index.html
tools/vocexcel/: index.html
(+69 files in other folders)
